--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -152,10 +152,10 @@
   implementaci dynamického analyzátoru, který bude verifikovat programy napsané
   v jazyce Java vůči kontraktům. Analyzátor je implementován pomocí frameworku
   RoadRunner.},
-  abstract.en={Contracts for concurrency describes required atomicity of method
-  sequences in concurrent programs. This work aims at implementing a dynamic
-  analyzer to verify programs written in Java against contracts. The analyzer is
-  built upon the RoadRunner framework.},
+  abstract.en={Contracts for concurrency describe required atomicity of method
+  sequences in concurrent programs. This work proposes a dynamic analyzer to
+  verify programs written in Java against contracts. The analyzer is built upon
+  the RoadRunner framework.},
   declaration={I hereby declare that this term project was prepared as an
   original work by the author under the supervision of Ing. Aleš Smrčka, Ph.D.
   I have listed all the literary sources, publications and other sources, which
