--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -1571,7 +1571,7 @@ instrumentation performed by RoadRunner are described in detail in Section
 \ref{instrImpl}. Finally, Section \ref{testing} describes testing approaches.
 
 \section{General Approaches}
-\ref{approaches}
+\label{approaches}
 The implementation of the analyzer was guided by several principles or
 approaches that are described in this section.
 
