--- a/xzarsk03-contracts-for-concurrency-30-appendices.tex
+++ b/xzarsk03-contracts-for-concurrency-30-appendices.tex
@@ -7,3 +7,8 @@
 \label{appGrammar}
 
 \todo{include the grammar}
+
+\chapter{Class Diagram of the Contract Analyzer}
+\label{diagram}
+
+\todo{include the diagram}
