--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -923,7 +923,7 @@ This section provides an overview of the method.
 
 \subsection{Multi-threaded Program Traces}
 
-In context of the dynamic contract validation, multi-threaded program
+In the context of the dynamic contract validation, multi-threaded program
 \emph{trace} consists of events of the following types:
 \begin{itemize}
     \item thread forking or joining another thread,
@@ -959,7 +959,7 @@ is no target instance.
 A \emph{spoiler instance} $s$ of a spoiler $\sigma \in \mathbb{S}$ is defined
 similarly. We let $start(r) = e_{i_1}$ and $end(r) = e_{i_k}$ denote the first
 and last events of a target, respectively. Likewise, $start(s)$ and $end(s)$
-denotes the first and last events of a spoiler, respectively.
+denote the first and last events of a spoiler, respectively.
 
 \subsection{Contract Violation}
 
@@ -1021,7 +1021,7 @@ To further reduce the required information about the trace, \emph{vector clocks}
 are used. For each target and spoiler instance in the trace window, only vector
 clocks of their beginning and end need to be kept.
 
-The method for contract validation on-the-fly does the following. At method
+The method for on-the-fly contract validation does the following. At method
 entry events, target and spoiler sequences are detected. At method exit events,
 it is detected whether a target or a spoiler instance has ended. When a target
 instance ends, spoiler instances from the trace window are checked if they
@@ -1030,6 +1030,11 @@ trace window are checked if they are violated by the spoiler. At method exit,
 target and spoiler instances are also discarded when no longer needed.
 
 \todo{more detailed description, examples}
+{\color{blue}\lipsum[1-3]}
+
+\section{Previous Work}
+
+\todo{m. janousek, anaconda, results}
 {\color{blue}\lipsum[1-3]}
 
 
@@ -1064,7 +1069,7 @@ from the program under analysis, detects target and spoiler instances, and looks
 for contract violations. It manages data stored with threads and locks, such as
 trace windows and vector clocks. The \texttt{ContractAnalyzer} class can be
 instantiated without any dependencies from the RoadRunner project, which is
-useful for testing purposes. Detailed description of \texttt{ContractAnalyzer}
+useful for testing purposes. A detailed description of \texttt{ContractAnalyzer}
 can be found in Section \ref{contractAnalyzer}.
 
 The \texttt{ContractTool} class is a subclass of RoadRunner's \texttt{Tool}
@@ -1074,7 +1079,7 @@ definition file is parsed and \texttt{ContractAnalyzer} is created. In
 RoadRunner, such as lock acquire and release or method exit. These events are
 then processed and sent to \texttt{ContractAnalyzer}. Section \ref{contractTool}
 provides a detailed description of \texttt{ContractTool} and Section
-\ref{contracts} describes parsing and representation of contracts.
+\ref{contracts} describes the parsing and representation of contracts.
 
 For each thread, a \texttt{Window} instance is created by
 \texttt{ContractAnalyzer}. It stores information about target and spoiler
@@ -1087,32 +1092,32 @@ are checked.
 
 The analyzer is designed with several restrictions based on the previous work,
 such as \cite{janousek} or \cite{FITPUB10817}, to improve its performance.
-First, a restriction is placed on the parameters in contract definitions with
-the aim of reducing the number of instances in a trace window. Then the
-conditions for removing an instances from the trace window are discussed and a
-related contract restriction is introduced.  Finally, it is described how nested
-method calls should be handled.
+First, a restriction is placed on the parameters in contract definitions to
+reduce the number of instances in a trace window. Then the conditions for
+removing instances from the trace window are discussed and a related contract
+restriction is introduced. Finally, it is described how nested method calls
+should be handled.
 
 \subsection{Avoiding Cloning of Target and Spoiler Instances}
 
-The method for analyzing contracts described in \cite{janousek} produces
-enormous number of instances being tracked at the same time. The large number of
-instances is caused by the necessity to clone target and spoiler instances
+The method for analyzing contracts described in \cite{janousek} produces an
+enormous number of instances being tracked at the same time. A lot of instances
+are created because of the necessity to clone target and spoiler instances
 before they are advanced. Consider the following target: \texttt{a(X) b(Y)
 c(X,Y)} and the following program trace: \texttt{a(1) b(2) b(3) c(1,3)}.  When
 \texttt{a(1)} enters the trace window, a new instance is created and the value
 of \texttt{X} is set to 1. But when processing \texttt{b(2)}, the analyzer
 cannot reliably decide whether the method call belongs to the instance or not
-(there might be \texttt{c(1,2)} later in the trace). The only option is keep the
-instance and create a duplicate which is advanced (while setting \texttt{Y} to
-2).
+(there might be \texttt{c(1,2)} later in the trace). The only option is to keep
+the instance and create a duplicate which is then advanced (while setting
+\texttt{Y} to 2).
 
 To prevent duplication of instances, the following restriction was put on the
 contract definition. All target and spoiler parameters must be assigned in the
-first call of given target or spoiler. This ensures that there is no ambiguity
+first call of a given target or spoiler. This ensures that there is no ambiguity
 in deciding whether a given method call advances an instance or not. For
-example, the target from the previous example is invalid because after the first
-method call, the value of \texttt{Y} remains unknown.
+example, the target from the previous example is invalid because the value of
+\texttt{Y} remains unknown after the first method call.
 
 \subsection{Invalidating Instances}
 
@@ -1120,7 +1125,7 @@ A target or spoiler instance, as defined in Chapter \ref{chThree}, requires that
 no method belonging to the alphabet of a given target or spoiler may be called
 between the events that form the instance. In practice, it means that a running
 instance must be discarded when a method belonging to the target or spoiler is
-called. For example, consider target \texttt{abc} and the following program
+called. For example, consider a target \texttt{abc} and the following program
 trace: \texttt{aa}. After the first \texttt{a}, a new instance is created. After
 accepting the second \texttt{a}, the instance must be discarded.
 
@@ -1142,7 +1147,7 @@ the instance's target, three kinds of situations can happen:
         to the instance.
 \end{enumerate}
 
-The second situation can be illustrated on the following example. Consider
+The second situation can be illustrated in the following example. Consider a
 target \texttt{a(X) b(X)} and a program trace \texttt{a(1) b(2) b(1)}. After
 \texttt{a(1)}, an instance is created with \texttt{X} set to 1. When
 \texttt{b(2)} is called, the value of \texttt{X} conflicts with the value
@@ -1156,29 +1161,29 @@ instances detected, one with \texttt{X} set to 1, and one with \texttt{X} set to
 \texttt{a(2)} is accepted, the instance cannot be discarded even though it
 belongs to the alphabet of the target.
 
-The problems described above mean that the analyzer will never discard already
-running instance, the only option is to advance it. Another option is to modify
-the behavior in the third situation so that the analyzer will try to guess
-whether a method call belongs to the current instance or not. With simple
+The problems described above mean that the analyzer will never discard an
+already running instance, the only option is to advance it. Another option is to
+modify the behavior in the third situation so that the analyzer will try to
+guess whether a method call belongs to the current instance or not. With simple
 contracts, the decision can be easy. Consider the target from the previous
 paragraph: \texttt{a(X) b(X)}. In this case, every time a method \texttt{b()} is
-called, the analyzer can decide whether it belongs to currently tracked instance
-or not based on the value of \texttt{X}. The decision is less clear when a
-target contains the same method multiple times with different parameters. For
-example, consider target \texttt{a(X,Y) b(X) b(Y)} and a program trace
+called, the analyzer can decide whether it belongs to the currently tracked
+instance or not based on the value of \texttt{X}. The decision is less clear
+when a target contains the same method multiple times with different parameters.
+For example, consider target \texttt{a(X,Y) b(X) b(Y)} and a program trace
 containing two interleaved instances with different parameters: \texttt{a(1,2)
 a(2,3) b(2) b(1) b(2) b(3)}. After \texttt{a(1,2)}, a new instance is created
 with \texttt{X=1} and \texttt{Y=2}. After \texttt{a(2,3)}, another instance is
 created with \texttt{X=2} and \texttt{Y=3}. When \texttt{b(2)} is encountered,
 the second instance is advanced, because it matches the target. The analyzer may
-however discard the first instance, because \texttt{b(2)} is contained in the
+however discard the first instance because \texttt{b(2)} is contained in the
 target as \texttt{b(Y)}, but the expected method was \texttt{b(X)}. It is not
 clear, what the proper behavior should be. The analyzer should therefore never
 discard running instances.
 
 \subsection{Kleene Star in Contract Definition}
 
-The analyzer never invalidates a running instance. This fact allows for an
+The analyzer never invalidates a running instance. This fact allows for
 optimization in contract definitions. As defined in Chapter \ref{chThree}, a
 target or a spoiler is a regular expression over methods. The analyzer should
 therefore recognize contracts defined using all three basic operations:
@@ -1202,7 +1207,7 @@ return value, which is available only on method exit. For convenience, the
 analyzer should use only the method exit event. This means that the analyzer may
 produce unexpected results when the program under analysis contains nested calls
 to methods that are part of the contract. Consider the following methods that
-are both part of a contract:
+are both parts of a contract:
 
 \begin{lstlisting}[language=java]
 public void a() { b(); }
@@ -1244,7 +1249,7 @@ Arguments and return values which are reference values (class instances or
 arrays) can be stored directly in the \texttt{Object} data type. Primitive
 values (such as \texttt{int} or \texttt{float}) cannot be stored in
 \texttt{Object} directly, they must be wrapped in a class instance. Each
-primitive type has a corresponding object wrapper class, for example
+primitive type has a corresponding object wrapper class, for example,
 \texttt{int} is wrapped in the \texttt{java.lang.Integer} class. The
 \texttt{getArgs()} method should return an array of size 0 for a method that
 takes no arguments and it should return \texttt{null} when the arguments are not
@@ -1331,12 +1336,12 @@ Map.contains(I)Z M(K)
   <- Map.put(ID)V M(K,_) | Map.remove(I)D M(K) ;
 \end{lstlisting}
     \caption{Contract from Chapter \ref{chThree} written for a Map with
-    \texttt{int} keys and \texttt{double} values. The first target matches
-    inserting element to the map at given key and the retrieving it. The target
-    can be invalidated by calling either \texttt{put} or \texttt{get} with the
-    same key. The second target matches checking if a key is present in the map
-    and then modifying the value at given key. The target can be invalidated by
-    replacing the value or by removing it.}
+    \texttt{int} keys and \texttt{double} values. The first target matches an
+    inserting element to the map at a given key and then retrieving it. The
+    target can be invalidated by calling either \texttt{put} or \texttt{get}
+    with the same key. The second target matches checking if a key is present in
+    the map and then modifying the value at the given key. The target can be
+    invalidated by replacing the value or by removing it.}
 \end{figure}
 
 \subsection{Contract Representation}
@@ -1352,10 +1357,10 @@ matches the method from a contract. Meta-variables are parsed into a
 Each target and spoiler is represented by a \texttt{State} instance that will
 later be used to construct a finite automaton for detecting running target and
 spoiler instances. A target with a single method will be represented by two
-states: one starting state with transition to an accepting state. The transition
-will contain the method signature and meta-variables. During parsing of more
-complex targets and spoilers, these one-method state structures are combined
-together. See Figure \ref{states} for an example. During the analysis,
+states: one starting state with a transition to an accepting state. The
+transition will contain the method signature and meta-variables. During parsing
+of more complex targets and spoilers, these one-method state structures are
+combined. See Figure \ref{states} for an example. During the analysis,
 \texttt{State} instances will be used for checking whether a given method
 invocation can advance a given target or spoiler.
 
@@ -1421,10 +1426,10 @@ advanced (if possible) and new instances are started.
 An instance is bound to a target or spoiler from the contract definition. The
 instance is created by encountering the first method signature in a target or
 spoiler. The instance is advanced to the next state and waits for the next
-method as defined in given target or spoiler. During the first transition,
+method as defined in the given target or spoiler. During the first transition,
 values of all parameters are assigned. There can be multiple instances of the
 same target or spoiler that vary only by the value of their parameters. Each
-instance remembers the vector clock of their beginning.
+instance remembers the vector clock of its beginning.
 
 When an instance is advanced using the last method in the target or spoiler
 definition, it reaches an accepting state. At this point, the analyzer checks
@@ -1433,7 +1438,7 @@ reset. That means that the instance again waits for the first method signature
 in a given target or spoiler. The value of parameters will however stay
 unchanged. The vector clocks of the beginning and the end of the instance are
 saved. So when an instance is running for the second time, it has access to the
-vector clocks of previously encountered instance. See Figure
+vector clocks of a previously encountered instance. See Figure
 \ref{instanceLifeCycle} for illustration of an instance life cycle.
 
 \begin{figure}[hbt]
@@ -1445,13 +1450,13 @@ vector clocks of previously encountered instance. See Figure
         \input{figures/instancelifecycle4.tex}
         \caption{An example of an instance life cycle. In the first step, the
         instance is created when a method call \texttt{a(42)} is encountered.
-        The vector clock of beginning is set and the parameters are assigned a
-        value. In step 2, the instance is fully accepted. At this point, the
+        The vector clock of the beginning is set and the parameters are assigned
+        a value. In step 2, the instance is fully accepted. At this point, the
         analyzer looks for contract violations. Then the instance is reset, the
-        vector clock of beginning is reset, and vector clocks of last instance
-        are set. In step 3, method \texttt(a) is called with an argument that
-        matches the value of \texttt{X} in the instance. The instance is started
-        again. }
+        vector clock of the beginning is reset, and the vector clocks of the
+        last instance are set. In step 3, method \texttt(a) is called with an
+        argument that matches the value of \texttt{X} in the instance. The
+        instance is started again.}
     \end{center}
 \end{figure}
 
@@ -1464,13 +1469,13 @@ instance already present in the trace window. Two instances are matching, if
 they are bound to the same target or spoiler, their parameters share the same
 values, and they both just started (they accepted the same first method). In
 practice, the only difference between these matching instances is that one
-contains information about the previously encountered instance while the does
-not.
+contains information about the previously encountered instance while the other
+does not.
 
 \emph{Example.} Consider target \texttt{a(X) b(X)} and a program trace
 \texttt{a(1) b(1) a(2) b(2) a(1)}. After \texttt{a(1)}, the analyzer adds a new
 instance $i_1$ to the window with \texttt{X=1}. After \texttt{b(1)}, $i_1$ is
-advanced, accepted, and reset. No new instance is started, because there is no
+advanced, accepted, and reset. No new instance is started because there is no
 target starting with method \texttt{b}. After \texttt{a(2)}, $i_1$ cannot be
 advanced, because the parameters do not match. New instance $i_2$ with
 \texttt{X=2} is added to the trace window. After \texttt{b(2)}, $i_2$ is
@@ -1494,14 +1499,14 @@ instance, the analyzer will retrieve instances of a spoiler that can invalidate
 the target, as specified in the contract. Similarly, if the instance is a
 spoiler instance, the analyzer will look for instances of a target that can be
 invalidated by the spoiler. For each conflicting instance, it is checked whether
-the contract parameter values match. Then finally, the analyzer checks vector
-clocks of each matching instance and decides if the two instance interleave each
-other.
+the contract parameter values match. Then finally, the analyzer checks the
+vector clocks of each matching instance and decides if the two instances
+interleave each other.
 
 The two instances may not actually interleave each other. The interleaving is
 decided based on the vector clocks of the beginnings and ends of the two
 instances. Vector clocks are only updated when threads synchronize themselves.
-So the analyzer will marked the two instances as interleaving when there was not
+So the analyzer will mark the two instances as interleaving when there was not
 a synchronization between the threads that would prevent them to interleave each
 other in another run of the program under analysis.
 
@@ -1526,7 +1531,7 @@ Section \ref{roadRunnerUsage}). The following methods are overridden:
     \item \texttt{exit}, which is called when a method exits;
     \item \texttt{create}, which is called when a new thread is created;
     \item \texttt{acquire} and \texttt{release()}, which is called when a
-        synchronized method or synchronized block is entered or exited;
+        synchronized method or a synchronized block is entered or exited;
     \item \texttt{preStart}, which is called before a new thread is started
         (after a fork operation);
     \item \texttt{postJoin}, which is called after a thread is joined with
@@ -1542,12 +1547,12 @@ and calls the contract parser. After the contract is parsed, it constructs
 \texttt{ContractAnalyzer}.
 
 The \texttt{exit} method extracts relevant data from \texttt{MethodEvent} that
-is supplied by RoadRunner. Then it checks, if the method exists in the contract,
+is supplied by RoadRunner. Then it checks if the method exists in the contract,
 and if it does, \texttt{ContractAnalyzer} is called. The method filtering
 happens in \texttt{ContractTool} and not in \texttt{ContractAnalyzer} because it
 is not essential to the analysis and also, there are several filtering solutions
 available. In this master's thesis, the filtering is done by comparing method
-signatures during the analysis. Better approach, which might be implemented in
+signatures during the analysis. A better approach, which might be implemented in
 the future, is to instrument only methods contained in a contract. In that case,
 no filtering during analysis is needed as it is guaranteed that each method
 event produced will belong to a method in the contract.
@@ -1581,9 +1586,9 @@ which are briefly described in this section.
 
 \paragraph{Immutable data structures}
 All classes except for \texttt{ContractAnalyzer} and \texttt{ContractTool} are
-immutable. Once created, the internal state of objects do not change. All
-operations produce new object instead of modifying the current one. See the next
-section for more details.
+immutable. Once created, the internal state of objects does not change. All
+operations produce a new object instead of modifying the current one. See the
+next section for more details.
 
 \paragraph{Side effects and pure functions}
 Most methods in the analyzer are pure functions, which means that each call can
@@ -1598,19 +1603,20 @@ The analyzer contains and uses methods that take functions as parameters.
 
 \subsection{Immutable Data Structures}
 
-The data structures used by the analyzer are \emph{immutable}. Immutable object
-is an object whose internal state remains constant after it has been created.
-This property brings several benefits. The object can be shared among multiple
-threads without the need for synchronization. Immutable objects are always in a
-consistent state. The public methods of a given class will always behave the
-same way on an object. Immutable objects are also easy to test and reason about.
+The data structures used by the analyzer are \emph{immutable}. An immutable
+object is an object whose internal state remains constant after it has been
+created.  This property brings several benefits. The object can be shared among
+multiple threads without the need for synchronization. Immutable objects are
+always in a consistent state. The public methods of a given class will always
+behave the same way on an object. Immutable objects are also easy to test and
+reason about.
 
 In Java, immutability is achieved by following rules. Immutable classes should
 be \texttt{final} to avoid overriding of methods. All fields of a class
 should be \texttt{private} and \texttt{final}. All fields should reference only
 immutable objects or, if not possible, the fields should not be modified in the
-class. All methods that would normally modify the object should return new
-updated object instead. See Figure \ref{immutable} for an example.
+class. All methods that would normally modify the object should return updated
+object instead. See Figure \ref{immutable} for an example.
 
 \begin{figure}[hbt]
     \label{immutable}
@@ -1638,18 +1644,18 @@ public final class FiniteAutomaton {
 }
 \end{lstlisting}
     \caption{Simplified implementation of an immutable finite automaton. The
-    automaton consists of references to the starting state and to the current
+    automaton consists of references to the starting state and the current
     state. The public constructor allows creating automatons that are in their
     starting states, ensuring consistency. The advance method does not update
-    the current state but creates a new finite automaton with updated current
+    the current state but creates a new finite automaton with an updated current
     state.}
 \end{figure}
 
-In order to use immutable objects effectively, the Vavr collection library was
-used. It provides immutable replacements for standard Java collections.
+To use immutable objects effectively, the Vavr collection library was used. It
+provides immutable replacements for standard Java collections.
 
 \subsection{Dependency Inversion Principle}
-Several parts of the analyzer was designed with the dependency inversion
+Several parts of the analyzer were designed with the dependency inversion
 principle in mind. Classes holding low-level data, such as method signatures,
 method arguments, or contract parameters, are not used directly by the analyzer
 but via interfaces. For example, there is the \texttt{JvmSignature} class that
@@ -1666,8 +1672,8 @@ alternative implementations of the collection.
 The analyzer was built on RoadRunner version 0.5 from 2017. It contains the
 following dependencies: the ASM framework in version 5.0.2 with custom
 modifications, JFlex in version 1.4.2, and CUP in version 11a. The project was
-written for Java 8 and was built using Ant. For easier implementation of the
-analyzer several components were upgraded.
+written for Java 8 and was built using Ant. For an easier implementation of the
+analyzer, several components were upgraded.
 
 The ASM framework was upgraded to version 7.0 which supports Java 11. RoadRunner
 can therefore analyze programs compiled for Java 11. Before the upgrade took
@@ -1676,7 +1682,7 @@ of patches against the unmodified ASM version 5.0.2. Then, for each new version
 up to 7.0, the ASM was always replaced with a newer version and the custom
 patches were reapplied and modified if necessary. As a result, the ASM framework
 can be easily upgraded in the future by reapplying the custom patch series. The
-RoadRunner itself was modified in order to be built for Java 11.
+RoadRunner itself was modified to be built for Java 11.
 
 \section{Contract File Parsing}
 \label{cfParsing}
@@ -1699,7 +1705,7 @@ or \texttt{(Ljava/langString;II)V}. The list of terminals it produces is defined
 in the parser.
 
 The parser takes the contract definition file contents, creates a lexical
-analyzer and parses the file. The result is a \texttt{Contract} instance or an
+analyzer, and parses the file. The result is a \texttt{Contract} instance or an
 exception. Each method in a contract is parsed as a finite-state machine with a
 single state. The whole target or spoiler definition is constructed either by
 concatenating or alternating two states from left to right.
@@ -1708,9 +1714,9 @@ The current implementation of the parser introduces a limitation to the range of
 allowed regular expressions. When the alternation operation is used (denoted by
 \texttt{|}), the expressions cannot start with the same method. For example, the
 regular expression \texttt{(ab|ac)} is not allowed. The resulting finite
-automaton would be nondeterministic. The current implementation does not perform
-any conversion, all expressions must be converted by the user. In the previous
-example, the expression would need to be converted to \texttt{a(b|c)}.
+automaton would be non-deterministic. The current implementation does not
+perform any conversion, all expressions must be converted by the user. In the
+previous example, the expression would need to be converted to \texttt{a(b|c)}.
 
 \section{Changes in Instrumentation}
 \label{instrImpl}
@@ -1724,8 +1730,8 @@ a method invocation. These changes were taken without modifications from
 The main logic is contained in class \todo{break it}
 \texttt{rr.instrument.classes.SyncAndMethodThunkInserter}, in method
 \texttt{createMethodThunk}. The method creates a new method that will generate
-enter and exit events and call the original method. At the beginning, the values
-of method parameters needs to be stored, at the end, return value must be
+enter and exit events and call the original method. In the beginning, the values
+of method parameters need to be stored, at the end, the return value must be
 stored. The initial implementation described in \cite{janousek} contained
 several issues. Static methods could not be instrumented because of incorrect
 indexing of local variables. Methods with parameters of type \texttt{double} or
@@ -1735,7 +1741,7 @@ have been fixed and an extensive test suite was created to verify the final
 implementation.
 
 Each method is instrumented as follows. A new array of type \texttt{Object} is
-allocated with size equal to the number of parameters (taken from the method
+allocated with the size equal to the number of parameters (taken from the method
 descriptor). Then for each parameter, its value is loaded onto the operand
 stack. Reference values are stored directly in the array. Primitive values are
 wrapped in an object by calling the \texttt{valueOf()} method in the
@@ -1796,11 +1802,11 @@ public int foo(int, java.lang.String);
     \caption{Method instrumented to obtain arguments and the return value. On
     lines 5 to 11, the enter event is generated. On lines 14 to 18, an array for
     arguments is created and stored in a local variable. On lines 19 to 25, the
-    first argument is wrapped in a object and stored in the array on index 0. On
-    lines 26 to 29, the second argument is stored directly in the array on index
-    1. On lines 30 to 33, the original method is called. On lines 36 to 40, the
-    return value is wrapped and stored in a local variable. Lines 42 to 50
-    generate the exit event. Lines 53 to 60 contain a catch block in case an
+    first argument is wrapped in an object and stored in the array on index 0.
+    On lines 26 to 29, the second argument is stored directly in the array on
+    index 1. On lines 30 to 33, the original method is called. On lines 36 to
+    40, the return value is wrapped and stored in a local variable. Lines 42 to
+    50 generate the exit event. Lines 53 to 60 contain a catch block in case an
     exception is thrown in the original function.}
 \end{figure}
 
@@ -1822,7 +1828,7 @@ RoadRunner's internal structures when testing the analyzer. The
 All structures, such as \texttt{MethodEvent}, are transformed into objects
 specific to the contract analyzer. In tests, \texttt{ContractAnalyzer} is used
 directly. RoadRunner is not executed, the events coming from the program under
-analysis are created by tests which allows for tests that do not rely on the
+analysis are created by tests, allowing for tests that do not rely on the
 thread scheduler and are very fast.
 
 The contract parser is tested using JUnit 5 tests. The contract definition is
@@ -1831,10 +1837,10 @@ with a \texttt{Contract} instance constructed directly in code. The contract for
 comparison is constructed by creating appropriate objects such as method
 signatures, meta-variables, and finite automaton states.
 
-Changes to instrumentation were tested by preparing custom subclass of
+Changes to instrumentation were tested by preparing a custom subclass of
 RoadRunner's \texttt{Tool} class that overrides the \texttt{exit} method and
 prints arguments and the return value to the standard output. A testing Java
-program was created that calls methods with various number and type of
+program was created that calls methods with various numbers and types of
 parameters. The test consists of analyzing the testing program with RoadRunner
 using the custom tool. The tool prints method arguments and return values to the
 output and the values must match those in the testing program. The whole process
@@ -1850,16 +1856,24 @@ tool. Then it verifies if a contract violation has been found.
 \chapter{Conclusion}
 
 The goal of this term project was to design a dynamic analyzer for validating
-parametric contracts with spoilers. The first part of this report provides the
-necessary background for designing an extension to the RoadRunner framework.
-Multi-threading in Java, Java Memory Model, and Java bytecode is described.
-Then the contracts for concurrency, along with their extensions, were presented.
-Finally, a dynamic analyzer for parametric contracts with spoilers was designed.
-It will be implemented as an extension to the RoadRunner framework.  Necessary
-changes to the RoadRunner itself were described.
+parametric contracts with spoilers. The analyzer was fully implemented as an
+extension to the RoadRunner framework.
 
-A master's thesis that will follow the term project will focus on implementing
-the analyzer and on testing it on real-world programs.
+The first part of this thesis provided the necessary background in
+multi-threaded programming in Java, dynamic analysis, and instrumentation in the
+RoadRunner framework. Contracts for parallelism were then introduced, together
+with an on-the-fly method for contract analysis. A dynamic analyzer for tracking
+parametric contracts was proposed, including changes to the RoadRunner framework
+itself. The analyzer was implemented and its functionality was verified by an
+extensive test suite.
+
+The analyzer implementation provides a good basis for contract validation of
+programs written in Java. The changes to RoadRunner can be used by various other
+analyzers.
+
+In the future, the synchronization of the analyzer can be improved for faster
+analysis. Better performance may be achieved by further restricting the range of
+allowed targets and spoiler definitions.
 
 \todo{}
-{\color{blue}\lipsum[1-5]}
+{\color{blue}\lipsum[1-3]}
