--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -150,12 +150,19 @@
   abstract.cs={Kontrakty pro paralelismus slouží k vyjádření potřebné atomicity
   sekvencí metod ve vícevláknových programech. Tato práce se zaměřuje na
   implementaci dynamického analyzátoru, který bude verifikovat programy napsané
-  v jazyce Java vůči kontraktům. Analyzátor je implementován pomocí frameworku
-  RoadRunner.},
+  v jazyce Java vůči kontraktům. Analyzátor podporuje parametrické kontrakty se
+  spoilery. Analyzátor je implementován jako rozšíření frameworku RoadRunner. V
+  rámci implementace analyzátoru byla do frameworku RoadRunner přidána podpora
+  pro získávání argumentů metod a jejich návratových hodnot. Analyzátor byl plně
+  implementován a jeho funkčnost byla ověřena na sadě testovacích programů.},
   abstract.en={Contracts for concurrency describe required atomicity of method
   sequences in concurrent programs. This work proposes a dynamic analyzer to
-  verify programs written in Java against contracts. The analyzer is built upon
-  the RoadRunner framework.},
+  verify programs written in Java against contracts for concurrency. The
+  analyzer was designed to detect violations of parametric contracts with
+  spoilers. The proposed analyzer was implemented as an extension to the
+  RoadRunner framework. As a part of the solution, support for accessing the
+  method arguments and return values was added to RoadRunner. The analyzer was
+  fully implemented and verified on a set of testing programs.},
   declaration={I hereby declare that this term project was prepared as an
   original work by the author under the supervision of Ing. Aleš Smrčka, Ph.D.
   I have listed all the literary sources, publications and other sources, which
